--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "@tarojs/taro": "3.4.2",
     "moment": "^2.29.1",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "taro-ui": "^3.0.0-alpha.3"
   },
   "devDependencies": {
     "@types/webpack-env": "^1.13.6",
