fix: 增加首页附近学校展示模块

--- a/project.config.json
+++ b/project.config.json
@@ -19,7 +19,7 @@
         "scopeDataCheck": false,
         "uglifyFileName": false,
         "checkInvalidKey": true,
-        "checkSiteMap": false,
+        "checkSiteMap": true,
         "uploadWithSourceMap": true,
         "compileHotReLoad": false,
         "lazyloadPlaceholderEnable": false,
